# evm-selectors

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: download.rs  lib.rs  parsing.rs  selector.rs
