[package]
name = "evm-selectors"
version = "0.1.0"
edition = "2021"
description = "A library for downloading and working with known EVM selectors."
license-file = "LICENSE"
documentation = "https://docs.rs/evm-selectors"
repository = "https://github.com/Bobface/evm-selectors"

[dependencies]
anyhow = "1.0.86"
ethers = "2.0.14"
reqwest = { version = "0.12.4", optional = true }


[features]
default = ["download"]
download = ["reqwest"]
